<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name" />

    <TextView
        android:id="@+id/mobileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number" />

    <EditText
        android:id="@+id/mobileEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/groupSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_size" />

    <EditText
        android:id="@+id/groupSizeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_group_size"
        android:inputType="number" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/smokingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoking_area" />

    <RadioGroup
        android:id="@+id/smokingRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/smokingYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/smokingNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/requestsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_requests" />

    <EditText
        android:id="@+id/additionalRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_additional_request_s" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>
